SUBDIRS = dicom envi
prolibdir = $(GDLDATADIR)/lib
prolib_DATA = \
  appleman.pro \
  array_indices.pro \
  bilinear.pro \
  calendar.pro \
  congrid.pro \
  correlate.pro \
  deriv.pro \
  diag_matrix.pro \
  dialog_message.pro \
  dialog_pickfile.pro \
  dist.pro \
  doc_library.pro \
  escape_special_char.pro \
  factorial.pro \
  file_basename_old.pro \
  file_copy.pro \
  file_delete.pro \
  file_dirname_old.pro \
  file_expand_path.pro \
  file_lines.pro \
  file_which.pro \
  filepath.pro \
  findex.pro \
  findfile.pro \
  get_login_info.pro \
  helpform.pro \
  hist_2d.pro \
  hist_equal.pro \
  hist_nd.pro \
  identity.pro \
  idl_validname.pro \
  image_statistics.pro \
  imsl_erf.pro \
  imsl_zerosys.pro \
  interpol.pro \
  ishft.pro \
  kurtosis.pro \
  la_invert.pro \
  last_item.pro \
  lmgr.pro \
  loadct.pro \
  map_clip_set.pro \
  matrix_multiply.pro \
  mean.pro \
  meanabsdev.pro \
  moment.pro \
  norm.pro \
  online_help.pro \
  path_sep.pro \
  ploterr.pro \
  poly.pro \
  poly_area.pro \
  popd.pro \
  primes.pro \
  printd.pro \
  pushd.pro \
  py_plot.pro \
  py_print.pro \
  query_bmp.pro \
  query_dicom.pro \
  query_gif.pro \
  query_image.pro \
  query_jpeg.pro \
  query_pict.pro \
  query_png.pro \
  query_ppm.pro \
  query_tiff.pro \
  read_ascii.pro \
  read_binary.pro \
  read_bmp.pro \
  read_dicom.pro \
  read_gif.pro \
  read_image.pro \
  read_jpeg.pro \
  read_pict.pro \
  read_png.pro \
  read_tiff.pro \
  read_xwd.pro \
  real_part.pro \
  restore.pro \
  rot.pro \
  rstrpos.pro \
  save.pro \
  showfont.pro \
  skewness.pro \
  skip_lun.pro \
  smooth.pro \
  spl_init_old.pro \
  spl_interp_old.pro \
  standardize.pro \
  stddev.pro \
  str_sep.pro \
  strmatch.pro \
  strsplit.pro \
  swap_endian.pro \
  swap_endian_inplace.pro \
  template.pro \
  template_blank.pro \
  trace.pro \
  tvscl.pro \
  uniq.pro \
  value_locate.pro \
  variance.pro \
  wmenu.pro \
  write_bmp.pro \
  write_gif.pro \
  write_image.pro \
  write_jpeg.pro \
  write_pict.pro \
  write_png.pro \
  zenity_check.pro \
  README.txt \
  STATUS
EXTRA_DIST = $(prolib_DATA)
TESTS = checks
