prolibdicomdir = $(GDLDATADIR)/lib/dicom
prolibdicom_DATA = \
  gdlffdicom__assoc__define.pro \
  gdlffdicom__assoc__test.pro \
  gdlffdicom__assoc_generateuid.pro \
  gdlffdicom__define.pro \
  gdlffdicom__dictionary.pro \
  gdlffdicom__test.pro \
  gdlffdicom_copy_lun.pro \
  gdlffdicom_date.pro \
  gdlffdicom_time.pro \
  gdlffdicom_trim.pro
EXTRA_DIST = $(prolibdicom_DATA)
